# clams

./: CMakeLists.txt  README.md  recipe.md  recipe.txt
ros-pkg/core/clams/include/clams/: trajectory.h
ros-pkg/core/clams/src/lib/: slam_calibrator.cpp  trajectory.cpp
ros-pkg/core/clams/src/prog/: convert_trajectory.cpp
ros-pkg/core/stream_sequence/include/stream_sequence/: frame_projector.h  stream_sequence_base.h
ros-pkg/core/stream_sequence/src/lib/: frame_projector.cpp  stream_sequence.cpp  stream_sequence_base.cpp  stream_sequence_pcl_wrapper.cpp
ros-pkg/core/stream_sequence/src/prog/: sseq_to_freiburg.cpp
sdf_tracker/: CMakeLists.txt
sdf_tracker/src/: tracker_clams.cpp
